--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
                 <div class="summary">
                     <p>Hello there welcome to my website.</p>
-                    <p>My name is Kevin Nyawakira i'm 21 years old,i born in Burundi at Bujumbura i'm a web developer. I began to code when i was 15, my first programming language was C programming(i learn the basics) then i learned Python(intermediate level). When i began to learn HTML5 and CSS3 i said to myself:<em>"I want to create websites the rest of my life"</em>.</p>
+                    <p>My name is Kevin Nyawakira i'm 21 years old,i born in Burundi at Bujumbura I'm a web developer. I began to code when i was 15, my first programming language was C programming(i learn the basics) then i learned Python(intermediate level). When i began to learn HTML5 and CSS3 i said to myself:<em>"I want to create websites the rest of my life"</em>.</p>
                     <p>About my education,i had completed my high school at NOtre Dame de Vugizo High school at Bujumbura.I had done some online courses on many e-learning platform,I have also some certificate on accomplishment.I'm excellent in planning,analysing,designing and developing </p>
                     <p>Now, i am a secon year student at Adventist University of central Africa in Rwanda at Kigali in Information technology.</p>
                      
@@ -92,7 +92,7 @@
                     <p>Here are some projects i have done :</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="http://github.com/kevin81767">Auca</a></span> - <span class="project-tagline">A social network for school where teache and student can interact each other. Teachers can give assignment,announcement,etc... </span>
+                    <span class="project-title"><a href="http://github.com/kevin81767">Auca</a></span> - <span class="project-tagline">A social network for school where teachers and students can interact each other. Teachers can give assignment,announcement,etc... </span>
                     
                 </div><!--//item-->
                 <div class="item">
@@ -100,6 +100,9 @@
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="#" target="_blank">CVemplate</a></span> - <span class="project-tagline">You're on it. It's this template i developed for create my CV</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="#" target="_blank">More-Or-Less</a></span> - <span class="project-tagline">It is a small game in Python in which you have to guess as few as possible the number which the computer has taken at random.</span>
                 </div><!--//item-->
                 <hr>
                 <h3>The best projects are coming in few months. ;)</h3>
