Adding some changes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="animate.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -76,10 +77,8 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
                 <div class="summary">
-                    <p>Hello there welcome to my website.</p>
-                    <p>My name is Kevin Nyawakira i'm 21 years old,i born in Burundi at Bujumbura I'm a web developer. I began to code when i was 15, my first programming language was C programming(i learn the basics) then i learned Python(intermediate level). When i began to learn HTML5 and CSS3 i said to myself:<em>"I want to create websites the rest of my life"</em>.</p>
-                    <p>About my education,i had completed my high school at NOtre Dame de Vugizo High school at Bujumbura.I had done some online courses on many e-learning platform,I have also some certificate on accomplishment.I'm excellent in planning,analysing,designing and developing </p>
-                    <p>Now, i am a secon year student at Adventist University of central Africa in Rwanda at Kigali in Information technology.</p>
+                    <h2>Hey there welcome on my  online CV</h2>
+                    <p>My name is Kevin Nyawakira I am Burundian passionate about programming especially in web developement. I started writing code when I was 15 and since I spend at least 5 hours in front of my computer writing code. I finish high school in 2015 now i do university in Rwanda at <a href="http://www.auca.ac.rw">Auca</a> in computer science</p>
                      
                 </div><!--//summary-->
             </section><!--//section-->
@@ -112,7 +111,7 @@
             <section class="skills-section section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
                 <div id="toFade">
-                    <div class="skillset">        
+                    <div class="skillset animated bounceInDown">        
                         <div class="item">
                             <h3 class="level-title">Python</h3>
                             <div class="level-bar">
