--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
                 <div class="summary">
-                    <h2>Hey there welcome on my  online CV</h2>
+                    <h3>Heey, welcome on my  online CV</h3>
                     <p>My name is Kevin Nyawakira I am Burundian passionate about programming especially in web developement. I started writing code when I was 15 and since I spend at least 5 hours in front of my computer writing code. I finish high school in 2015 now i do university in Rwanda at <a href="http://www.auca.ac.rw">Auca</a> in computer science</p>
                      
                 </div><!--//summary-->
@@ -91,7 +91,7 @@
                     <p>Here are some projects i have done :</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="http://github.com/kevin81767">Auca</a></span> - <span class="project-tagline">A social network for school where teachers and students can interact each other. Teachers can give assignment,announcement,etc... </span>
+                    <span class="project-title"><a href="http://github.com/kevin81767">ST connection</a></span> - <span class="project-tagline">A social network for school where teachers and students can interact each other. Teachers can give assignment,announcement,etc... </span>
                     
                 </div><!--//item-->
                 <div class="item">
